<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data android:layout_width="wrap_content">

        <variable
            name="boardViewModel"
            type="com.ongo.signal.ui.main.viewmodel.BoardViewModel" />

        <variable
            name="fragment"
            type="com.ongo.signal.ui.main.fragment.MainFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/round_edittext"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_mic"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="5dp"
            android:onClick="@{()->fragment.onMicClicked()}"
            android:src="@drawable/baseline_mic_24"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            app:layout_constraintEnd_toStartOf="@id/iv_search"
            app:layout_constraintTop_toTopOf="@id/et_search" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:onClick="@{()->fragment.searchKeyword()}"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            app:layout_constraintEnd_toEndOf="@id/et_search"
            app:layout_constraintTop_toTopOf="@id/et_search" />

        <ImageView
            android:id="@+id/iv_refresh"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:onClick="@{()->fragment.loadAllBoards()}"
            android:src="@drawable/baseline_refresh_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            app:layout_constraintEnd_toEndOf="@id/et_search"
            app:layout_constraintTop_toTopOf="@id/et_search"
            tools:visibility="visible" />

        <HorizontalScrollView
            android:id="@+id/hsv_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag1"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag1)}"
                    android:text="@string/tag1" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag2"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag2)}"
                    android:text="@string/tag2" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag3"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag3)}"
                    android:text="@string/tag3" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag4"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag4)}"
                    android:text="@string/tag4" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag5"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag5)}"
                    android:text="@string/tag5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag6"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag6)}"
                    android:text="@string/tag6" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag7"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag7)}"
                    android:text="@string/tag7" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag8"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag8)}"
                    android:text="@string/tag8" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag9"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->fragment.onChipClicked(@string/tag9)}"
                    android:text="@string/tag9" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_post"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->fragment.gotoPost()}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hsv_chip"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_post" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:backgroundTint="@color/purple"
            android:foreground="@drawable/ripple_effect"
            android:onClick="@{()->fragment.onFABClicked()}"
            android:src="@drawable/baseline_edit__mint_24"
            app:layout_anchor="@id/rv_post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
