<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_cancel_button"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="User1"
        android:textColor="@color/purple"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/tv_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_guide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/by_propose"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="@id/btn_accept"
        app:layout_constraintStart_toStartOf="@id/btn_deny"
        app:layout_constraintTop_toTopOf="@id/tv_username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_deny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_cancel_button_ripple"
        android:backgroundTint="@color/red"
        android:paddingHorizontal="8dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/deny"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btn_accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_cancel_button_ripple"
        android:paddingHorizontal="8dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/accept"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_deny"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />


</androidx.constraintlayout.widget.ConstraintLayout>